--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -13,7 +13,11 @@
 
 .main {
 	height: 100%;
-	max-height: 100vh;
+	min-height: 100vh;
+	.content {
+		color: #FFF;
+		margin: 40vh 0
+	}
 	.contentTitle {
 		display: flex;
 		position: absolute;
