--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -32,15 +32,59 @@
 	#burger {
 		color: #FFF;
 		display: flex;
-		width: 40px;
-		min-height: 40px;
-		justify-content: center;
+		flex-flow: column wrap;
+		justify-content: flex-start;
 		align-self: flex-end;
-		outline: 1px solid currentColor;
 		cursor: pointer;
 		margin-left: auto;
 		transition: .2s ease;
 		z-index: 10;
+		min-height: 35px;
+		span {
+			width: 100%;
+			background-color: currentColor;
+			transition: $Transition;
+			position: absolute;
+			left: 0;
+			&:nth-of-type(1) {
+				transform-origin: top right;
+			}
+			&:nth-of-type(2) {
+				transform-origin: bottom left;
+			}
+		}
+		@include adaptive(x2) {
+			width: 47px;
+			span {
+				height: 3px;
+			}
+			span:nth-of-type(2) {
+				top: 21px;
+			}
+		}
+		@include adaptive(x1) {
+			width: 35px;
+			span {
+				height: 2px;
+			}
+			span:nth-of-type(2) {
+				top: 16px;
+			}
+		}
+		&.opened {
+			span:nth-of-type(1) {
+				transform: rotate(-45deg);
+				left: -5px;
+				background-color: #d5dade;
+			}
+			span:nth-of-type(2) {
+				transform: rotate(45deg);
+				top: 0;
+				left: 5px;
+				background-color: #d5dade;
+			}
+		}
+
 		//ANIMATION
 
 		&.appear_before {
@@ -66,9 +110,13 @@
 		position: fixed;
 		height: 100vh;
 		width: 50vw;
+		@include adaptive(x05) {
+			width: 100vw;
+			transition: $Transition;
+		}
 		transform: translateX(100%);
 		transition: transform $Transition;
-		background-color: #131517;
+		background-color: #FFF;
 		top: 0;
 		right: 0;
 
@@ -103,7 +151,33 @@
 				}
 			}
 		}
-
+		.hello {
+			position: absolute;
+			bottom: 45px;
+			color: #131517;
+			font-weight: bold;
+			font-size: 20px;
+			@include adaptive(xx) {
+				bottom: $framePaddingXx;
+				left: $framePaddingXx;
+			}
+			@include adaptive(x2) {
+				bottom: $framePaddingX2;
+				left: $framePaddingX2;
+			}
+			@include adaptive(x1) {
+				bottom: $framePaddingX1;
+				left: $framePaddingX1;
+			}
+			@include adaptive(x05) {
+				bottom: $framePaddingX05;
+				left: $framePaddingX05;
+			}
+			@include adaptive(x025) {
+				bottom: $framePaddingX025;
+				left: $framePaddingX025;
+			}
+		}
 		.nav__menu {
 			position: fixed;
 			top: 0;
@@ -132,8 +206,9 @@
 					a {
 						line-height: 100%;
 						transition: $Transition;
+						color: #d5dade;
 						&:hover {
-							color: #999;
+							color: #131517;
 						}
 					}
 				}
