--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -11,30 +11,33 @@
 		}
 	}
 	form {
-		max-width: 300px;
+		min-width: 50vw;
 		label {
 			z-index: 8;
 			position: relative;
 			display: block;
 			color: $specialDark;
-			transform: translateY(-90%);
 			transition: .3s ease;
 			opacity: 1;
 			h4 {
-			font-size: 35px;
-
+				transform: translateY(35px);
+				font-size: 35px;
+				line-height: 35px;
 			}
-		}
-		input {
-			font-family: inherit;
-			z-index: 9;
-			position: relative;
-			font-size: 35px;
-			background-color: transparent;
-			color: #FFF;
-			outline: none;
-			border: 0;
-
+			input, textarea {
+				width: 100%;
+				font-family: inherit;
+				z-index: 9;
+				position: relative;
+				font-size: 35px;
+				line-height: 35px;
+				background-color: transparent;
+				color: #FFF;
+				outline: none;
+				border: 0;
+				padding:0;
+				overflow: hidden;
+			}
 		}
 		.send {
 			display: flex;
