--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -6,6 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	color: #FFF;
+	position: relative;
 	@include adaptive(xx) {
 		padding: 0 $framePaddingXx;
 	}
@@ -29,6 +30,7 @@
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
+		z-index: 10;
 		h5 {
 			font-weight: 500;
 		}
@@ -75,6 +77,29 @@
 		@include adaptive(x025) {
 			margin: auto 0 $framePaddingX025;
 		}
+	}
+
+	.images {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		top:0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			transition: .6s cubic-bezier(0.1, 0.1, 0.1, 1.5)
+		}
+	}
+	#img0 {
+		z-index: 1;
+	}
+	#img1 {
+		z-index: 2;
+	}
+	#img2 {
+		z-index: 3;
 	}
 
 }
