--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -9,9 +9,10 @@
 	backface-visibility: hidden;
 	will-change: transform;
 	transform: translate(0);
+
 }
 
-.main {
+main {
 	height: 100%;
 	min-height: 100vh;
 	.content {
