--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -1,105 +1,112 @@
-.page-main .project {
-	height: 100%;
-	background: no-repeat 50%;
-	background-size: contain;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	color: #FFF;
-	position: relative;
-	@include adaptive(xx) {
-		padding: 0 $framePaddingXx;
-	}
-	@include adaptive(x2) {
-		padding: 0 $framePaddingX2;
-	}
+.page-main {
 
-	@include adaptive(x1) {
-		padding: 0 $framePaddingX1;
-	}
-	@include adaptive(x05) {
-		padding: 0 $framePaddingX05;
-	}
-	@include adaptive(x025) {
-		padding: 0 $framePaddingX025;
-	}
-
-	.headers {
-		position: fixed;
+	transition: .7s ease;
+	.project {
 		height: 100%;
+		background: no-repeat 50%;
+		background-size: contain;
+		margin: auto;
 		display: flex;
-		justify-content: center;
 		flex-direction: column;
-		z-index: 10;
-		h5 {
-			font-weight: 500;
-		}
-	}
-	a {
+		color: #FFF;
 		position: relative;
-	}
-	a:before {
-		content: "";
-		position: absolute;
-		width: 100%;
-		max-width: 100%;
-		z-index: -1;
-		height: 38px;
-		left: 0px;
-		bottom: 20px;
-		transform: scaleX(0);
-		transform-origin: left center 0px;
-		background: rgb(255, 255, 255);
 		overflow: hidden;
-		transition: transform 0.8s cubic-bezier(0.8, 0, 0.2, 1);
-	}
-	a:hover:before {
-		transform: none;
-		transform-origin: right center 0px;
-	}
 
-	.services {
-		padding: 0;
-		list-style: none;
-		font-size: 15px;
 		@include adaptive(xx) {
-			margin: auto 0 $framePaddingXx;
+			padding: 0 $framePaddingXx;
 		}
 		@include adaptive(x2) {
-			margin: auto 0 $framePaddingX2;
+			padding: 0 $framePaddingX2;
 		}
+
 		@include adaptive(x1) {
-			margin: auto 0 $framePaddingX1;
+			padding: 0 $framePaddingX1;
 		}
 		@include adaptive(x05) {
-			margin: auto 0 $framePaddingX05;
+			padding: 0 $framePaddingX05;
 		}
 		@include adaptive(x025) {
-			margin: auto 0 $framePaddingX025;
+			padding: 0 $framePaddingX025;
 		}
-	}
 
-	.images {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		left: 0;
-		top:0;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		img {
-			transition: .6s cubic-bezier(0.1, 0.1, 0.1, 1.5)
+		.headers {
+			position: fixed;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			z-index: 10;
+			h5 {
+				font-weight: 500;
+			}
 		}
-	}
-	#img0 {
-		z-index: 1;
-	}
-	#img1 {
-		z-index: 2;
-	}
-	#img2 {
-		z-index: 3;
-	}
+		a {
+			position: relative;
+		}
+		a:before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			max-width: 100%;
+			z-index: -1;
+			height: 38px;
+			left: 0px;
+			bottom: 20px;
+			transform: scaleX(0);
+			transform-origin: left center 0px;
+			background: rgb(255, 255, 255);
+			overflow: hidden;
+			transition: transform 0.8s cubic-bezier(0.8, 0, 0.2, 1);
+		}
+		a:hover:before {
+			transform: none;
+			transform-origin: right center 0px;
+		}
 
+		.services {
+			padding: 0;
+			list-style: none;
+			font-size: 15px;
+			z-index: 10;
+			@include adaptive(xx) {
+				margin: auto 0 $framePaddingXx;
+			}
+			@include adaptive(x2) {
+				margin: auto 0 $framePaddingX2;
+			}
+			@include adaptive(x1) {
+				margin: auto 0 $framePaddingX1;
+			}
+			@include adaptive(x05) {
+				margin: auto 0 $framePaddingX05;
+			}
+			@include adaptive(x025) {
+				margin: auto 0 $framePaddingX025;
+			}
+		}
+
+		.images {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			img {
+				transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1)
+			}
+		}
+		#img0 {
+			z-index: 1;
+		}
+		#img1 {
+			z-index: 2;
+		}
+		#img2 {
+			z-index: 3;
+		}
+
+	}
 }
