--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -2,13 +2,28 @@
 	height: 100%;
 	max-height: 100vh;
 	width: 100%;
-	transition: .2s ease;
+
 	&.appear_before {
 		opacity: 0;
 	}
 	&.appear_after {
 		opacity: 1;
-		transition: .2s ease;
+
 	}
 
+}
+
+#slider_ui {
+	position: fixed;
+	bottom: 10vh;
+	width: 200px;
+	left: calc(50% - 100px);
+	display: flex;
+	z-index: 20;
+	justify-content: stretch;
+	align-items: center;
+	button {
+		flex: 1 1 100%;
+		cursor: pointer;
+	}
 }
