--- a/src/components/Content/blocks/pagetitle.scss
+++ b/src/components/Content/blocks/pagetitle.scss
@@ -2,22 +2,18 @@
 	position: fixed;
 	z-index: 10;
 	color: #FFF;
-	transition: .1s ease;
 	line-height: $logoH+px;
 	@include adaptive(xx) {
-		max-width: 1280px;
-		width: 100%;
 		left: calc(50% - 690px);
 		top: $framePaddingXx;
-		padding-left: 37px;
+		padding-left: 90px;
 		line-height: $logoH * 1.4+px;
 	}
 	@include adaptive(x2) {
-		max-width: 1280px;
-		width: 100%;
 		left: calc(50% - 690px);
 		top: $framePaddingX2;
-		padding-left: 40px;
+		padding-right: 80px;
+		padding-left: 90px;
 		line-height: $logoH+px;
 	}
 	@include adaptive(x15) {
@@ -27,6 +23,7 @@
 	@include adaptive(x1) {
 		left: $logoW + $framePaddingX1;
 		top: $framePaddingX1;
+		padding-left: 20px;
 	}
 	@include adaptive(x05) {
 		left: $logoW + $framePaddingX05;
@@ -34,8 +31,6 @@
 		line-height: $logoH * .8+px;
 	}
 	@include adaptive(x025) {
-		left: $logoW + $framePaddingX025;
-		top: $framePaddingX025;
 		opacity: 0 !important;
 	}
 
