--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 	font-size: 20px;
 }
 
-h1 {
+h1, .nav__menu a {
 	font-weight: 700;
 	line-height: 80px;
 	margin: 0 0 30px 0;
@@ -22,7 +22,7 @@ h1 {
 	@include adaptive(x2) {
 		font-size: 126px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 84px;
 	}
 	@include adaptive(x05) {
@@ -43,7 +43,7 @@ h2 {
 	@include adaptive(x2) {
 		font-size: 115px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 77px;
 	}
 	@include adaptive(x05) {
@@ -63,7 +63,7 @@ h3 {
 	@include adaptive(x2) {
 		font-size: 77px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 51px;
 	}
 	@include adaptive(x05) {
@@ -83,7 +83,7 @@ h4 {
 	@include adaptive(x2) {
 		font-size: 54px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 35px;
 	}
 	@include adaptive(x05) {
@@ -104,7 +104,7 @@ h5 {
 	@include adaptive(x2) {
 		font-size: 30px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 20px;
 	}
 	@include adaptive(x05) {
@@ -124,7 +124,7 @@ h6 {
 	@include adaptive(x2) {
 		font-size: 25px;
 	}
-	@include adaptive(x1) {
+	@include adaptive(x15) {
 		font-size: 15px;
 	}
 	@include adaptive(x05) {
@@ -134,6 +134,7 @@ h6 {
 		font-size: 13px;
 	}
 }
+
 h3, h4, h5, h6 {
 	font-weight: 600;
 	line-height: 100%;
