--- a/src/index.scss
+++ b/src/index.scss
@@ -34,27 +34,27 @@ $x2: 2560px;
 
 @mixin adaptive($media) {
 	@if $media == x025 {
-		@media only screen and (min-width: 0) and (max-width: $x025) {
+		@media (min-width: 0) and (max-width: $x025) {
 			@content;
 		}
 	} @else if $media == x05 {
-		@media only screen and (min-width: 0) and (max-width: $x05) {
+		@media (min-width: 0) and (max-width: $x05) {
 			@content;
 		}
 	} @else if $media == x1 {
-		@media only screen and (min-width: 0) and (max-width: $x1) {
+		@media (min-width: 0) and (max-width: $x1) {
 			@content;
 		}
 	} @else if $media == x15 {
-		@media only screen and (min-width: 0) and (max-width: $x15) {
+		@media (min-width: 0) and (max-width: $x15) {
 			@content;
 		}
 	} @else if $media == x2 {
-		@media only screen and (min-width: 0) and (max-width: $x2) {
+		@media (min-width: 0) and (max-width: $x2) {
 			@content;
 		}
 	} @else if $media == xx {
-		@media only screen and (min-width: $x2) {
+		@media (min-width: $x2) {
 			@content;
 		}
 	}
