--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -1,5 +1,6 @@
 .page-main {
 	transition: .7s ease;
+
 	.project {
 		height: 100%;
 		background: no-repeat 50%;
@@ -7,21 +8,22 @@
 		margin: auto;
 		display: flex;
 		flex-direction: column;
-		color: #FFF;
+		color: #fff;
 		position: relative;
 		overflow: hidden;
 		transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
 		&.out {
-			.headers h1, .headers h5{
-				transform: translateY(-100px);
+			.headers h1,
+			.headers h5 {
+				transform: translateY(-130px);
 			}
 			.images {
-				transform: translateX(-100vw);
-
+				transform: translateX(-110vw);
 			}
 			&.right {
-				.headers h1, .headers h5{
-					transform: translateY(-100px);
+				.headers h1,
+				.headers h5 {
+					transform: translateY(-130px);
 				}
 				.images {
 					transform: translateX(100vw);
@@ -33,20 +35,20 @@
 				transform: translateX(100vw);
 			}
 			&.right {
-
 				.images {
 					transform: translateX(-110vw);
 				}
 			}
 		}
-		&.now, &.now.right {
-			.headers h1, .headers h5{
+		&.now,
+		&.now.right {
+			.headers h1,
+			.headers h5 {
 				transform: translateY(0);
 			}
 			.images {
 				transform: translateX(0);
 			}
-
 		}
 
 		@include adaptive(xx) {
@@ -76,23 +78,28 @@
 
 			.hidden {
 				overflow: hidden;
+				padding: 15px 0;
 			}
 			h1 {
 				transition: $Transition;
-
+				margin: 0;
 			}
 			h5 {
 				font-weight: 500;
 				transition: $Transition;
 				transition-delay: .1s;
+
+				@include adaptive(x05) {
+					margin-top: -15px;
+				}
 			}
 		}
 		a {
 			position: relative;
 			display: inline-block;
 			color: currentColor;
+			width: max-content;
 			&:hover {
-
 				transition: 0.1s cubic-bezier(0.8, 0, 0.2, 1);
 			}
 		}
@@ -102,14 +109,34 @@
 			width: 100%;
 			max-width: 100%;
 			z-index: -1;
-			height: 36px;
 			left: 0px;
-			bottom: 20px;
+			bottom: 0px;
 			transform: scaleX(0);
 			transform-origin: left center 0px;
 			background: rgb(255, 255, 255);
 			overflow: hidden;
 			transition: transform 0.8s cubic-bezier(0.8, 0, 0.2, 1);
+			height: 36px;
+			@include adaptive(xx) {
+				height: 49px;
+				bottom: -27px;
+			}
+			@include adaptive(x2) {
+				height: 49px;
+				bottom: -27px;
+			}
+			@include adaptive(x1) {
+				height: 35px;
+				bottom: -8px;
+			}
+			@include adaptive(x05) {
+				height: 24px;
+				bottom: 7px;
+			}
+			@include adaptive(x025) {
+				height: 18px;
+				bottom: 14px;
+			}
 		}
 		a:hover:before {
 			transform: none;
@@ -149,7 +176,8 @@
 			align-items: center;
 			transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
 			img {
-				transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1)
+				transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
+				min-height: 120vh;
 			}
 			&#img0 {
 				transition-delay: .2s;
@@ -164,6 +192,5 @@
 				z-index: 3;
 			}
 		}
-
 	}
 }
