--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -1,15 +1,14 @@
 
 .scrollBox {
 	overflow: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	z-index: 10;
 	height: 100%;
-	-webkit-overflow-scrolling: touch;
 	touch-action: manipulation;
 	backface-visibility: hidden;
 	will-change: transform;
 	transform: translate(0);
-
+	-webkit-overflow-scrolling: touch;
 }
 
 main {
@@ -58,6 +57,7 @@ main {
 		flex-flow: column;
 		max-width: 1280px;
 		margin: auto;
+
 		@include adaptive(xx) {
 			padding: 0 $framePaddingXx - 17 0 $framePaddingXx;
 		}
@@ -72,6 +72,15 @@ main {
 		}
 		@include adaptive(x025) {
 			padding: 0 $framePaddingX025 - 17 0 $framePaddingX025;
+		}
+
+		h1, h3{
+			line-height: 120%;
+			margin:0;
+		}
+		
+		.content_text {
+			line-height: 160%
 		}
 	}
 }
