--- a/src/components/Content/Works/works.scss
+++ b/src/components/Content/Works/works.scss
@@ -61,7 +61,7 @@
 			margin: $framePaddingXx 0 0;
 			line-height: 0;
 			img {
-				min-width: 100vh;
+				min-width: 100vw;
 				max-width: 100%;
 				margin:0;
 			}
