--- a/src/components/Header/menu.scss
+++ b/src/components/Header/menu.scss
@@ -45,7 +45,7 @@
 		span {
 			width: 100%;
 			background-color: currentColor;
-			transition: transform $Transition, background-color $Transition, top $Transition, color 0s;
+			transition: transform $Transition;
 			position: absolute;
 			height: 2px;
 			&:nth-of-type(1) {
