--- a/src/components/Content/blocks/pagetitle.scss
+++ b/src/components/Content/blocks/pagetitle.scss
@@ -5,6 +5,7 @@
 	line-height: $logoH+px;
 	transition: $Transition;
 	overflow: hidden;
+	font-weight: 400;
 	span {
 		display: block;
 		transition: $Transition;
