--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -47,6 +47,10 @@
 				height: 30px;
 				margin-right: 20px;
 			}
+			&:hover {
+				color: $linkColor;
+				transition: $Transition;
+			}
 		}
 	}
 
