--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -34,8 +34,11 @@
 
 	.sayhello {
 		a {
-			transition: $Transition;
 			display: inline-block;
+			&:hover {
+				color: $linkColor;
+				transition: $Transition;
+			}
 		}
 		overflow: hidden;
 	}
