--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ $logoW: 48.5;
 
 $specialBlack: #131517;
 $specialDark: #303336;
+$linkColor: #999;
 
 $framePaddingX025: 20px;
 $framePaddingX05: 40px;
