--- a/src/components/Content/About/about.scss
+++ b/src/components/Content/About/about.scss
@@ -15,20 +15,19 @@
 			margin: 75px 0 75px 0;
 			div {
 				margin: 0 40px 40px 0;
-
 			}
 		}
 		@include adaptive(x05) {
 			flex-flow: row wrap;
 			margin: 75px 0 75px 0;
 			div {
-				margin-right: 20px
+				margin-right: 20px;
 			}
 		}
 		@include adaptive(x25) {
 			margin: 75px 0 75px 0;
 			div {
-				margin-right: 0
+				margin-right: 0;
 			}
 		}
 	}
@@ -57,5 +56,10 @@
 		h1 {
 			transform: translate(0);
 		}
+	}
+
+	a span:hover {
+		color: $linkColor;
+		transition: $Transition;
 	}
 }
