--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -13,6 +13,7 @@
 
 @keyframes b_mask {
 	0% {
+		transform: scale(1) translate3d(0%, 0%, 0);
 		opacity: 0;
 	}
 	10% {
@@ -26,6 +27,18 @@
 		transform: scale(40) translate3d(0%, 0%, 0);
 	}
 }
+@keyframes bg_mask {
+	0% {
+		opacity: 0;
+	}
+
+	70% {
+		opacity: 1;
+	}
+	100% {
+
+	}
+}
 .overlay {
 	position: absolute;
 	z-index: 10;
@@ -33,18 +46,17 @@
 		display: block;
 		height: 100vh;
 		width: 100vw;
-		// background: #343434;
+		animation: bg_mask 5s infinite;
+		animation-fill-mode: forwards;
+		animation-timing-function: cubic-bezier(0.5, 0.39, 0.43, 0.96);
 	}
 	.logo {
-		transform: scale(1) translate3d(0%, 0%, 0);
-		opacity: 0;
 		animation: b_mask 2s infinite;
 		animation-fill-mode: forwards;
 		animation-timing-function: cubic-bezier(0.5, 0.39, 0.43, 0.96);
 		width: 100%;
 		overflow: hidden;
 		height: 100%;
-		
 
 		img {
 			min-height: 100vh;
