--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -18,7 +18,7 @@
 				transform: translateY(-130px);
 			}
 			.images {
-				transform: translateX(-110vw);
+				opacity:1;
 			}
 			&.right {
 				.headers h1,
@@ -26,17 +26,17 @@
 					transform: translateY(-130px);
 				}
 				.images {
-					transform: translateX(100vw);
+					opacity:1;
 				}
 			}
 		}
 		&.before {
 			.images {
-				transform: translateX(100vw);
+				opacity:0;
 			}
 			&.right {
 				.images {
-					transform: translateX(-110vw);
+					opacity:0;
 				}
 			}
 		}
