--- a/src/components/Header/menu.scss
+++ b/src/components/Header/menu.scss
@@ -45,23 +45,22 @@
 		span {
 			width: 100%;
 			background-color: currentColor;
-
+			transition: $Transition;
 			position: absolute;
 			height: 2px;
 			&:nth-of-type(1) {
-				transition: $Transition, color 0s;
 				transform-origin: right top;
 			}
 			&:nth-of-type(2) {
-				transition: $Transition, color 0s;
 				transform-origin: right bottom;
 				margin-top: 16px;
 			}
 		}
 		&.opened {
 			span {
-				transition: $Transition;
-				color: #d5dade !important;
+				background-color: #d5dade !important;
+
+
 				&:nth-of-type(1) {
 					transform: rotate(-45deg);
 				}
